--- a/project/portfolio-2.html
+++ b/project/portfolio-2.html
@@ -47,10 +47,10 @@
     </nav><!-- /.navbar -->
 
     <!-- Header -->
-    <header class="header text-center pb-5" style="background: linear-gradient(rgba(0, 0, 0, 0.7), rgb(204, 214, 118)), url('../img/portfolio/wedding-plan.png');background-attachment: fixed; background-size: cover; background-position: bottom;" >
+    <header class="header text-center pb-5" style="background: linear-gradient(rgba(0, 0, 0, 0.7), rgb(249, 175, 70)), url('../img/portfolio/taka-store.png');background-attachment: fixed; background-size: cover; background-position: bottom;" >
       <div class="container text-white">
-        <h1 class="display-4">Premium Wedding</h1>
-        <p class="lead-2 mt-6" style="">Landing page design for Wedding Person</p>
+        <h1 class="display-4">TakaStore</h1>
+        <p class="lead-2 mt-6" style="">E-Commerce Shoes Website build in Laravel and using Stripe for Payments</p>
       </div>
     </header><!-- /.header -->
 
@@ -69,7 +69,7 @@
 
           <div class="row">
             <div class="col-md-8 mb-6 mb-md-0">
-              <img src="../img/portfolio/wedding-plan.png" alt="project image">
+              <img src="../img/portfolio/taka-store.png" alt="project image">
             </div>
 
 
@@ -77,12 +77,12 @@
               <h5>Project detail</h5>
 
               <p>
-                create a landing page design wedding. full with reservation form and cool animation</p>
+                create e-commerce website using laravel and stripe, this project takes 1 week from design to development. Full functionality E-commerce like cart,account and payment using stripe for easy way.</p>
 
               <ul class="project-detail mt-7">
                 <li>
                   <strong>Client</strong>
-                  <span>Wedding Person</span>
+                  <span>Taka Store</span>
                 </li>
 
                 <li>
@@ -92,12 +92,12 @@
 
                 <li>
                   <strong>Skills</strong>
-                  <span>Design, HTML, CSS, Javascript</span>
+                  <span>Design, HTML, CSS, Javascript,Laravel,Stripe</span>
                 </li>
 
                 <li>
                   <strong>Address</strong>
-                  <a href="https://yuhdaibrahim.github.io/landing-premium/">https://yuhdaibrahim.github.io/landing-premium/</a>
+                  <a href="http://takastore.rf.gd/">http://takastore.rf.gd/</a>
                 </li>
               </ul>
             </div>
