--- a/project/portfolio-3.html
+++ b/project/portfolio-3.html
@@ -47,10 +47,10 @@
     </nav><!-- /.navbar -->
 
     <!-- Header -->
-    <header class="header text-center pb-5" style="background: linear-gradient(rgba(0, 0, 0, 0.7), rgb(204, 214, 118)), url('../img/portfolio/wedding-plan.png');background-attachment: fixed; background-size: cover; background-position: bottom;" >
+    <header class="header text-center pb-5" style="background: linear-gradient(rgba(0, 0, 0, 0.7), rgb(215, 249, 70)), url('../img/portfolio/omnifood.png');background-attachment: fixed; background-size: cover; background-position: bottom;" >
       <div class="container text-white">
-        <h1 class="display-4">Premium Wedding</h1>
-        <p class="lead-2 mt-6" style="">Landing page design for Wedding Person</p>
+        <h1 class="display-4">Omnifood</h1>
+        <p class="lead-2 mt-6" style="">Landing page design for Food Deliver Company</p>
       </div>
     </header><!-- /.header -->
 
@@ -69,7 +69,7 @@
 
           <div class="row">
             <div class="col-md-8 mb-6 mb-md-0">
-              <img src="../img/portfolio/wedding-plan.png" alt="project image">
+              <img src="../img/portfolio/omnifood.png" alt="project image">
             </div>
 
 
@@ -77,17 +77,17 @@
               <h5>Project detail</h5>
 
               <p>
-                create a landing page design wedding. full with reservation form and cool animation</p>
+                create a landing page design for start-up with a background delivery restaurant. complete with all features such as testimonials and reservations.</p>
 
               <ul class="project-detail mt-7">
                 <li>
                   <strong>Client</strong>
-                  <span>Wedding Person</span>
+                  <span>Omnifood</span>
                 </li>
 
                 <li>
                   <strong>Date</strong>
-                  <span>October 27, 2019</span>
+                  <span>june 11, 2019</span>
                 </li>
 
                 <li>
@@ -97,7 +97,7 @@
 
                 <li>
                   <strong>Address</strong>
-                  <a href="https://yuhdaibrahim.github.io/landing-premium/">https://yuhdaibrahim.github.io/landing-premium/</a>
+                  <a href="https://yuhdaibrahim.github.io/Omnifood/">https://yuhdaibrahim.github.io/Omnifood/</a>
                 </li>
               </ul>
             </div>
