--- a/project/portfolio-8.html
+++ b/project/portfolio-8.html
@@ -26,7 +26,7 @@
 
         <div class="navbar-left">
           <button class="navbar-toggler" type="button">&#9776;</button>
-          <a class="navbar-brand" href="../portfolio.html">
+          <a class="navbar-brand" href="../index.html">
             <img class="logo-light" src="../img/logo-light.png" alt="logo">
             <img class="logo-dark" src="../img/logo-dark.png" alt="logo">
           </a>
@@ -37,7 +37,7 @@
 
           <ul class="nav nav-navbar">
             <li class="nav-item">
-              <a class="nav-link" href="../portfolio.html">Home</a>
+              <a class="nav-link" href="../index.html">Home</a>
             </li>
 
           </ul>
