--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
 
-    <title>TheSaaS — Portfolio</title>
+    <title>Taka— Portfolio</title>
 
     <!-- Styles -->
     <link href="css/page.min.css" rel="stylesheet">
